[gd_scene format=3 uid="uid://dkb8xfwvv2ba1"]

[ext_resource type="Script" uid="uid://2t86ojwembcw" path="res://Scenes/ui/mood_bar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://e6k2t1xev8rh" path="res://Assets/ui/mood_bars/mood_bar_empty_nobg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://n3r3ct6a048b" path="res://Assets/ui/mood_bars/mood_bar_sprite_full_nobg.png.import.png" id="3"]

[node name="MoodBar" type="Control" unique_id=1173708956]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 720.0

[node name="HealthBar" type="TextureProgressBar" parent="." unique_id=1585037585]
layout_mode = 0
offset_right = 171.0
offset_bottom = 365.0
scale = Vector2(0.5, 0.5)
fill_mode = 3
texture_under = ExtResource("2")
texture_progress = ExtResource("3")
script = ExtResource("1")

[node name="MaxHealth" type="Label" parent="HealthBar" unique_id=798860995]
layout_mode = 0
offset_left = 123.0
offset_top = 91.0
offset_right = 193.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
